hphp/hack/test/typecheck/construct/trait_construct_override.php.like_types.exp
File "trait_construct_override.php", line 10, characters 39-43:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "trait_construct_override.php", line 10, characters 39-43:
But got string
File "trait_construct_override.php", line 17, characters 19-29:
Class MyChild does not initialize all of its members; member is not always initialized.
Make sure you systematically set $this->member when the method __construct is called.
Alternatively, you can define the member as optional (?...)
 (NastCheck[3015])
